--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,12 @@
 {
     "name": "automattic/underscores",
     "type": "wordpress-theme",
-    "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
+    "description": "Hi. I'm a starter theme called orange-theme base on underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
     "keywords": [
         "WordPress",
         "Themes"
     ],
-    "homepage": "https://github.com/Automattic/_s",
-    "license": "GPL-2.0-or-later",
-    "authors": [
-        {
-            "name": "Contributors",
-            "homepage": "https://github.com/Automattic/_s/graphs/contributors"
-        }
-    ],
+    "homepage": "https://github.com/tung7ran/orange-theme",
     "require": {
         "php": ">=5.6"
     },
@@ -26,10 +19,10 @@
     "scripts": {
         "lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
         "lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor .",
-        "make-pot": "wp i18n make-pot . languages/_s.pot"
+        "make-pot": "wp i18n make-pot . languages/orange-theme.pot"
     },
     "support": {
-        "issues": "https://github.com/Automattic/_s/issues",
-        "source": "https://github.com/Automattic/_s"
+        "issues": "https://github.com/Automattic/orange-theme/issues",
+        "source": "https://github.com/Automattic/orange-theme"
     }
 }
