--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "automattic/underscores",
+    "name": "tun7ran/orange-theme",
     "type": "wordpress-theme",
     "description": "Hi. I'm a starter theme called orange-theme base on underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
     "keywords": [
@@ -20,9 +20,5 @@
         "lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
         "lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor .",
         "make-pot": "wp i18n make-pot . languages/orange-theme.pot"
-    },
-    "support": {
-        "issues": "https://github.com/Automattic/orange-theme/issues",
-        "source": "https://github.com/Automattic/orange-theme"
     }
 }
